# blockhost-engine-ergo

./: .gitignore  .gitmodules  README.md  engine.json  package.json  tsconfig.json
blockhost/engine_ergo/: wizard.py
blockhost/engine_ergo/static/: fleet-sdk.browser.js
docs/: cli.md  configuration.md  engine-manifest.md  ergo-tx-pitfalls.md  fund-manager.md  guard-script.md  privilege-separation.md  reconciler.md  templating.md
docs/superpowers/plans/: 2026-03-27-ergo-engine-conversion.md
ergo-signer/: Cargo.toml
ergo-signer/src/: main.rs  p2p.rs
examples/: blockhost-monitor.service  ergo-signer.service
packaging/: build.sh
root-agent-actions/: wallet.py
scripts/: compile-contracts.ts  deploy-contracts.ts  first-boot-hook.sh  fleet-browser.ts  generate-signup-page  keygen.ts  mint_nft.ts  signup-engine.js  signup-template.html  tsconfig.json
src/: bhcrypt.ts  crypto.ts  paths.ts  provisioner.ts
src/ab/: index.ts
src/ab/commands/: add.ts  del.ts  init.ts  list.ts  new.ts  up.ts
src/admin/: config.ts  index.ts  nonces.ts  types.ts
src/admin/handlers/: knock.ts
src/bw/: cli-utils.ts  index.ts  key-utils.ts
src/bw/commands/: balance.ts  cleanup.ts  plan.ts  (+7 more)
src/ergo/: address.ts  contracts.ts  provider.ts  registers.ts  types.ts
src/fund-manager/: addressbook.ts  config.ts  distribution.ts  index.ts  state.ts  types.ts  web3-config.ts  withdrawal.ts
src/handlers/: index.ts
src/is/: index.ts
src/monitor/: index.ts  scanner.ts
src/nft/: mint.ts  reference.ts
src/reconcile/: index.ts
src/root-agent/: client.ts
src/util/: counter.ts
(+3 files in other folders)
